<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">School scheduler</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="courseName"> Courses: </string>
    <string name="homeworkName">Homework: </string>
    <string name="name">Name:</string>
    <string name="date">Due Date:</string>
    <string name="description">Description:</string>
    <string name="descriptionHint">140 Characters</string>
    <string name="dateHint">mmddyyyy</string>
    <string name="addCourse">Add</string>
    <string name="addHomework">Add</string>
    <string name="submitName">Submit</string>
    <string name="default_message">Course:</string>
    <string name="dialog_done">Done</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="title_activity_add_homework">AddHomeworkActivity</string>
    <string name="statement">Enter the Course:</string>
    <string name="menu_delete">Delete Item</string>
    <string name="menu_edit">Edit Item</string>
    <string name="allHomework">All Homework </string>

</resources>
