<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:padding="10dp"
    android:rowCount="12"
    tools:ignore="NewApi" >

    <TextView
        android:id="@+id/courseEnd"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:text="@string/courseName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/courseNameEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="0"
        android:text="" />

    <TextView
        android:id="@+id/homeworkEnd"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_row="1"
        android:text="@string/homeworkName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/nameText"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/dateText"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="3"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/dateInput"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="3"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="168dp"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_column="1"
        android:layout_gravity="left|center_vertical"
        android:layout_row="5"
        android:ems="10"
        android:hint="@string/description" />

    <Button
        android:id="@+id/submitButton"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="6"
        android:text="@string/submitName" />

</GridLayout>