<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:ignore="NewApi" >

    <LinearLayout
        android:id="@+id/courseLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="True" >

        <TextView
            android:id="@+id/courseEnd"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight=".3"
            android:text="@string/courseName"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/courseNameEnd"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textSize="24sp"
            android:layout_weight=".7"
            android:text="" />
    </LinearLayout>

    <TextView
        android:id="@+id/homeworkEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/courseLayout"
        android:text="@string/homeworkName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/homeworkEnd" >

        <TextView
            android:id="@+id/nameText"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight=".3"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight=".7"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus android:layout_width="match_parent" />

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameLayout" >

        <TextView
            android:id="@+id/dateText"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight=".3"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/dateInput"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight=".7"
            android:ems="10"
            android:inputType="date" />
    </LinearLayout>

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateLayout"
        android:layout_gravity="left"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_below="@id/descriptionText"
        android:layout_gravity="left"
        android:ems="10"
        android:hint="@string/description" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionInput"
        android:layout_centerHorizontal="true"
        android:onClick="submit"
        android:text="@string/submitName" />

</RelativeLayout>